--- a/template/index.html
+++ b/template/index.html
@@ -1,80 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
-  
-  <head>
-  	
-  	<meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  </head>
-  <body>
-  	<div class="container-fluid">
-  		<div class="row">
-    		<div class="col-xs-8">
-      <h2 class="text-primary text-center">Hello Books</h2>
-    </div>
-    </div>
-  
-  <div class="row">
-    <div class="col-xs-6">
-      <p><h4>You are welcome<h4><br>  We are committed to giving
-      you an exceptional experience in this library.
-      You decide what to read, pick it and own it for the duration
-    	of your rent.
-    	Axquire Knowlege with ease.</p>
-    </div>
-    <div class="col-xs-6">
-	    <div class="body white-bg">
-          <div class="form-group">
-            <input class="form-control" placeholder="Username" name="username" type="text" autofocus value="">
-          </div>
-        	<div class="form-group">
-            <input class="form-control" placeholder="Password" name="password" type="password">
-          </div>
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6 lt8"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="no-js ie7 lt8"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="no-js ie8 lt8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="UTF-8" />
+        <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
+        <title>Hello Books | Home</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta name="description" content="Login and Registration Form with HTML5 and CSS3" />
+        <meta name="keywords" content="html5, css3, form, switch, animation, :target, pseudo-class" />
+        <meta name="author" content="Codrops" /> 
+        <link rel="stylesheet" type="text/css" href="css/demo.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/animate-custom.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    </head>
+    <body>
+        <div class="container-fluid clearfix">
+            <!-- Codrops top bar -->
+            <div class="codrops-top">
+                <a href="">
+                    <img src="images/logo2.png">
+                </a>
+            <div class="navbar navbar-default pull-right">
+                <ul class="navigation">
+                    <li> <a href="about.html">About</a></li>
+                    <li> <a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+                <div class="clr"></div>
+            </div><!--/ Codrops top bar -->
+        <div class= "container-fluid clearfix">
+            <div class= "row">
+                <div class= "col-md-6 col-md-offset-left">
+            <header>
+                <h1>We are born with the potential to become Leaders, but each one of us decides to live out <span>this reality by picking out a path of Growth.</span></h1>
 
+                <h3><span>At Hello Books Library, we help you fill your mind with all that you need to unleash the Leader in You on the path of Growth.</span></h3>
+            </header>
+        </div>
+            <div class= "col-md-6 col-md-offset-right">
+            <section>				
+                <div id="container_demo" >
+                    <!-- hidden anchor to stop jump http://www.css3create.com/Astuce-Empecher-le-scroll-avec-l-utilisation-de-target#wrap4  -->
+                    <a class="hiddenanchor" id="toregister"></a>
+                    <a class="hiddenanchor" id="tologin"></a>
+                    <div id="wrapper">
+                        <div id="login" class="animate form">
+                            <form  action="mysuperscript.php" autocomplete="on"> 
+                                <h1>Log in</h1> 
+                                <p> 
+                                    <label for="username" class="uname" data-icon="u" > Your email or username </label>
+                                    <input id="username" name="username" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
+                                </p>
+                                <p> 
+                                    <label for="password" class="youpasswd" data-icon="p"> Your password </label>
+                                    <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" /> 
+                                </p>
+                                <p class="keeplogin"> 
+									<input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" /> 
+									<label for="loginkeeping">Keep me logged in</label>
+								</p>
+                                <p class="login button"> 
+                                    <input type="submit" value="Login" /> 
+								</p>
+                                <p class="change_link">
+									Not a member yet ?
+									<a href="#toregister" class="to_register">Join us</a>
+								</p>
+                            </form>
+                        </div>
 
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="Remember Me" name="remember">
-          	<span> &nbsp; Remember Me</span>
-          </label>
-          <span class="pull-right">
-          	<label>
-            	<a href="../reset/index.html"> Forgot Password?</a>
-          	</label>
-          </span>
-      	</div>
-          <input type="submit" class="btn btn-lg btn-success btn-block" value="SIGN IN" />
-    	</div>
+                        <div id="register" class="animate form">
+                            <form  action="mysuperscript.php" autocomplete="on"> 
+                                <h1> Sign up </h1> 
+                                <p> 
+                                    <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
+                                    <input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
+                                </p>
+                                <p> 
+                                    <label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
+                                    <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="mysupermail@mail.com"/> 
+                                </p>
+                                <p> 
+                                    <label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
+                                    <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                                </p>
+                                <p> 
+                                    <label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
+                                    <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                                </p>
+                                <p class="signin button"> 
+									<input type="submit" value="Sign up"/> 
+								</p>
+                                <p class="change_link">  
+									Already a member ?
+									<a href="#tologin" class="to_register"> Go and log in </a>
+								</p>
+                            </form>
+                        </div>
+						
+                    </div>
+                </div>  
+            </section>
+        </div>
+        </div>
     </div>
-  </div>
-  <p>Things cats <span class="text-danger">love:</span></p>
-  <ul>
-    <li>cat nip</li>
-    <li>laser pointers</li>
-    <li>lasagna</li>
-  </ul>
-  <p>Top 3 things cats hate:</p>
-  <ol>
-    <li>flea treatment</li>
-    <li>thunder</li>
-    <li>other cats</li>
-  </ol>
-  <form action="/submit-cat-photo">
-    <label><input type="radio" name="indoor-outdoor"> Indoor</label>
-    <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
-    <label><input type="checkbox" name="personality"> Loving</label>
-    <label><input type="checkbox" name="personality"> Lazy</label>
-    <label><input type="checkbox" name="personality"> Crazy</label>
-    <input type="text" placeholder="cat photo URL" required>
-    <button type="submit">Submit</button>
-  </form>
 </div>
- 
-
-
-
-  </body>
-
-
-
+    </body>
 </html>
