--- a/template/css/signin.css
+++ b/template/css/signin.css
@@ -1,7 +1,5 @@
-body {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #eee;
+.modal-content {
+  background-color: #09100585;
 }
 
 .form-signin {
