--- a/template/index.html
+++ b/template/index.html
@@ -46,8 +46,7 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="books.html">Library</a></li>
                 </ul>
               </nav>
             </div>
