--- a/template/admin.html
+++ b/template/admin.html
@@ -3,8 +3,6 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
  
-	
-<!-- Mirrored from demo.ponjoh.com/Simpla-Admin/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 31 Jul 2017 01:43:41 GMT -->
 <head>
 		
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -75,7 +73,7 @@
 			
 			<div id="login-content">
 				
-				<form action="index.html">
+				<form action="admin-home.html">
 				
 					<div class="notification information png_bg">
 						<div>
@@ -108,6 +106,4 @@
 		
   </body>
   
-
-<!-- Mirrored from demo.ponjoh.com/Simpla-Admin/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 31 Jul 2017 01:43:45 GMT -->
 </html>
