--- a/template/index.html
+++ b/template/index.html
@@ -102,10 +102,10 @@ data-dismiss="modal">Sign in</button>
 <form class="form-signin">
         <h2 class="form-signin-heading">Join the Readers</h2>
 
-        <label for="inputEmail" class="sr-only">First name</label>
+        <label for="inputText" class="sr-only">First name</label>
         <input type="text" id="inputName" class="form-control" placeholder="name" required autofocus>
 
-        <label for="inputName" class="sr-only">Last name</label>
+        <label for="inputText" class="sr-only">Last name</label>
         <input type="text" id="inputName" class="form-control" placeholder="surname" required autofocus>
 
         <label for="inputEmail" class="sr-only">Email address</label>
