The page links in the templates now works

--- a/template/borrow-books.html
+++ b/template/borrow-books.html
@@ -52,8 +52,8 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <!--Logo-->
-                        <a href="#sc1" class="navbar-left show"><h1 class="masthead-brand logo"><strong>HelloBooks</strong></h1></a>
+                         <!--Logo-->
+                        <a href="index.html" class="navbar-left show"><h1 class="masthead-brand logo"><strong>HelloBooks</strong></h1></a>
                         <div class="space-10"></div>
                     </div>
                     <!--Toggle-button-->
@@ -67,27 +67,30 @@
                                         <img src="images/active_user.png" class="img-circle img-thumbnail" alt="library" />
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="#"> <span><i class="icofont icofont-user"></i></span> Profile</a>
+                        <li>
+                        <a href="profile.html"> <span><i class="icofont icofont-user"></i></span>Profile</a>
                                         </li>
-                                        <li>
-                                            <a href="#"> <span><i class="icofont icofont-notification"></i></span>Notifications</a>
+                        <li>
+                        <a href="#"> <span><i class="icofont icofont-notification"></i></span>Notifications</a>
                                         </li>
-                                        <li class="dropdown active">
-                                            <a href="#"> <span><i class="icofont icofont-book"></i></span>Borrow book</a>
+                        <li class="dropdown active">
+                        <a href="borrow-books.html"> <span><i class="icofont icofont-book"></i></span>Borrow book</a>
                                         </li>
-                                        <li>
-                                            <a href="#"> <span><i class="icofont icofont-upload"></i></span>Upload Book</a>
+                        <li>
+                        <a href="#"> <span><i class="icofont icofont-upload"></i></span>Upload Book</a>
                                         </li>
-                                        <li>
-                                            <a href="#"> <span><i class="icofont icofont-read-book"></i></span>Rent/Read book</a>
+                        <li>
+                        <a href="#"> <span><i class="icofont icofont-read-book"></i></span>Rent/Read book</a>
                                         </li>
-                                        <li>
-                                            <a href="#"> <span><i class="icofont icofont-read-book"></i></span>Borrow History</a>
+                        <li>
+                        <a href="Borrow-history.html"> <span><i class="icofont icofont-read-book"></i></span>Borrow History</a>
                                         </li>
-                                        <li>
-                                            <a href="#"> <span><i class="icofont icofont-logout"></i></span> Log Out</a>
-                                        </li>
+                        
+                        <li><a href="books.html"><span><i class="icofont icofont-book"></i></span>All books</a></li>
+
+                        <li>
+                        <a href="#"> <span><i class="icofont icofont-logout"></i></span> Log Out</a></li>
+
                                     </ul>
                                 </li>
                             </ul>
