--- a/template/index.html
+++ b/template/index.html
@@ -20,6 +20,7 @@
     <!-- Custom styles for this template -->
     <link href="css/cover.css" rel="stylesheet">
     <link href="css/signin.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/icofont.css">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -39,7 +40,7 @@
       <div class="site-wrapper-inner">
 
         <div class="cover-container">
-
+          
           <div class="masthead offset-pull-left clearfix">
             <div class="inner">
               <h1 class="masthead-brand"><strong>HelloBooks</strong></h1>
