--- a/template/index.html
+++ b/template/index.html
@@ -41,7 +41,7 @@
 
         <div class="cover-container">
           
-          <div class="masthead offset-pull-left clearfix">
+          <div class="masthead offset-pull-left navbar-fixed-top clearfix">
             <div class="inner">
               <h1 class="masthead-brand"><strong>HelloBooks</strong></h1>
               <nav>
