--- a/template/style.css
+++ b/template/style.css
@@ -215,11 +215,20 @@ input:-webkit-autofill:focus {
   .cover-container {
     width: 100%; /* Must be percentage or pixels for horizontal alignment */
   }
+  .navbar-fixed-top {
+    background-color: #00000090;
+    position: span;
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    width: 100%;
+  }
 }
 
-@media (min-width: 992px) {
+/*@media (min-width: 992px) {
   .masthead,
   .mastfoot,
   .cover-container {
     width: 700px;
-  }
+  }*?
